FIX: I fix problem with z-index
I delete ball img(I thought that better is ball makes in css)
I make ball in css and I change position in crosshair
(https://stackoverflow.com/questions/5218927/z-index-not-working-with
-fixed-positioning?rq=1)

--- a/src/style/style__components/_ball.scss
+++ b/src/style/style__components/_ball.scss
@@ -1,4 +1,7 @@
 .ball{
     width: 90px;
     height: 90px;
+    background-color: orange;
+    border-radius: 50%;
+    z-index: -1;
 }
