--- a/src/style/style__components/_crosshair.scss
+++ b/src/style/style__components/_crosshair.scss
@@ -2,10 +2,11 @@
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    border: 5px tomato solid;
+    border: 5px #0984e3 solid;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     z-index: 999999;
     pointer-events: none;
     &::before{
@@ -13,7 +14,7 @@
         display: block;
         width: 15px;
         height: 15px;
-        background: tomato;
+        background: #0984e3;
         border-radius: 50%;
     }
 }
